# maveric-slam

./: .gitignore  CMakeLists.txt  README.md
include/: .image.h.un~  .key_points.h.un~  .tracking.h.swp  .tracking.h.un~  Matrix.h  descriptor.h  frame.h  gemmini_functions_cpu.h  image.h  key_points.h  local_feature_pool.h  pnp_solver.h  projection_factor.h  top_N.h  tracking.h  types.h
include/data/LCD/: vocabulary.h
include/data/quantized/: pair0_gt.h  quantized_image0.h
include/data/tracking/: pair0.h
include/data/tracking/pair0/: .image0.h.swp  image0.h
include/svd/: svd.h
outputs/: pairwise_transform.txt  transform_000785_000786.npy  transform_000786_000787.npy  transform_000787_000788.npy  transform_000788_000789.npy  transform_000789_000790.npy
outputs/785/: frame-000786.pose.txt  frame-000787.pose.txt  frame-000788.pose.txt  frame-000789.pose.txt  trajectory.ply  trajectory_000785_000789.ply
python/: compute_pairwise_diff.py  compute_trajectory.py  create_lookup_table.py  draw_features.py  pairwise_pnp.py  plot_feature_correspondance.py  superpoint_inference.py  superpoint_quantized.pt  superpoint_quantized_nonorm.pt
scripts/: run_pairwise_pnp.sh
src/: bow_main.c  lcd_main.c  local_bundle_adjustment.c  local_feature_matching.c  pnp_solver.c  projection_factor.c  run_nms.c  run_relin.c  top_N.c  tracking_main.c  types.c
